--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ if __name__ == '__main__':
     
                         <!-- ᴄᴏᴘʏ ᴛᴇxᴛ  -->
 
-      <button onclick="copy('text')">𝐂𝐨𝐩𝐲</button>
+      <button onclick="copy('text')" class="mb-3" style="color: red;">ᴄᴏᴘʏ</button>
     </div>
 
     <!-- Script -->
